[package]
name = "p5-rs"
version = "0.1.0"
authors = ["Ritoban Roy-Chowdhury <ritobanrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.0"
raqote = "0.8.0"
lyon_geom = "0.16.0"
euclid = "0.22.0"
font-kit = "0.7.1"

[profile.dev.package.raqote]
opt-level = 3
